--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-	repositories {
+    ext.kotlin_version = '1.4.10'
+    repositories {
 		google()
 		jcenter()
 		mavenCentral()
@@ -8,7 +9,8 @@ buildscript {
 	dependencies {
 		classpath 'com.android.tools.build:gradle:4.0.1'
 		classpath 'com.google.gms:google-services:4.3.3'
-	}
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 allprojects {
