--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ allprojects {
 	}
 }
 
+ext {
+	jacocoEnabled = System.properties.getProperty("jacocoEnabled") ?: "false"
+}
+
 task clean(type: Delete) {
 	delete rootProject.buildDir
 }
