--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,50 @@
 apply plugin: 'com.android.application'
 apply from: 'jacoco.gradle'
 
+// Load Jacoco Only if needed
+if (jacocoEnabled.toBoolean()) {
+    project.logger.lifecycle('Applying jacoco build file: jacoco.gradle')
+    apply from: rootProject.file("jacoco.gradle")
+}
+
+// General switch for tests types this control report generation but not yet unit test selection - TODO Make this a flag
+def carvedTests = project.hasProperty('carvedTests')// ? project.getProperty('carvedTests') : false //Default value false
+
+def carvedTestSrcDir = "src/carvedTest"
+def testReportPrefix = "${buildDir}/carvedTest/testExecution"
+def coverageReportPrefix = "${buildDir}/carvedTest/coverage"
+
+if (carvedTests) {
+    if (project.hasProperty('testName')) {
+        def testName = project.getProperty('testName')
+        println ""
+        println "* Processing Carved Test ${testName}"
+        println ""
+
+        carvedTestSrcDir = "src/carvedTest/${testName}"
+
+        testReportPrefix = "${buildDir}/carvedTest/${testName}/testExecution"
+        coverageReportPrefix = "${buildDir}/carvedTest/${testName}/coverage"
+    }
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
     ndkVersion '22.0.7026061'
 
+    // Change the src folder for carved tests
+    sourceSets {
+        test {
+            if (carvedTests) {
+                java.srcDirs = ["$carvedTestSrcDir"]
+            }
+        }
+    }
+
 	defaultConfig {
 		applicationId 'org.openobservatory.ooniprobe'
-		minSdkVersion 21
+		minSdkVersion 23
 		targetSdkVersion 30
 		versionName '3.2.0'
 		versionCode 79
@@ -23,7 +59,7 @@ android {
 
     buildTypes {
         debug {
-            testCoverageEnabled true
+            testCoverageEnabled jacocoEnabled.toBoolean()
             buildConfigField 'String', 'IS_DEBUG', '"-debug"'
             buildConfigField 'String', 'COUNTLY_KEY', '"e6c2cfe53e85951d50567467cef3f9fa2eab32c3"'
         }
@@ -36,9 +72,32 @@ android {
     }
 
     testOptions {
-        animationsDisabled = true
         unitTests {
             includeAndroidResources = true
+        }
+
+        animationsDisabled true
+
+        unitTests.all {
+
+            // Nices output on the console/logs
+            testLogging {
+                events "passed", "skipped", "failed", "standardOut", "standardError"
+                outputs.upToDateWhen { false }
+                showStandardStreams = true
+            }
+
+            test {
+                //Get last path of default set path.
+                def junitXmlTestTaskName = file("$reports.junitXml.destination").name
+                def htmlTestTaskName = file("$reports.html.destination").name
+
+                if (carvedTests) {
+                    // Just use the same?
+                    reports.junitXml.destination = file("$testReportPrefix/$junitXmlTestTaskName")
+                    reports.html.destination = file("$testReportPrefix/$junitXmlTestTaskName")
+                }
+            }
         }
     }
 
@@ -154,6 +213,8 @@ dependencies {
 	testImplementation 'org.ooni:oonimkall:2021.05.13-070256'
 	testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
 
+    testImplementation 'org.robolectric:robolectric:4.2'
+
 	// Instrumentation Testing
 	androidTestImplementation 'tools.fastlane:screengrab:2.0.0'
 	androidTestImplementation 'com.github.blocoio:faker:1.2.8'
@@ -183,7 +244,4 @@ static def versionNameDate() {
     return new Date().format("yyyy.MM.dd-HH")
 }
 
-if (!getGradle().getStartParameter().getTaskRequests()
-  .toString().contains("Fdroid")){
-    apply plugin: 'com.google.gms.google-services'
-}
+
