--- a/app/build.gradle
+++ b/app/build.gradle
@@ -214,7 +214,7 @@ dependencies {
 	testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
 
     testImplementation 'org.robolectric:robolectric:4.2'
-
+    testImplementation 'androidx.test:core:1.3.0'
 	// Instrumentation Testing
 	androidTestImplementation 'tools.fastlane:screengrab:2.0.0'
 	androidTestImplementation 'com.github.blocoio:faker:1.2.8'
