Avoid breaking the app after instrumentation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/APP_NAME"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar.App">
+		android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar.App"
+		android:extractNativeLibs="true">
 		<activity
 			android:name=".activity.MainActivity"
 			android:launchMode="singleTop"
