--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,13 @@ android {
                     reports.junitXml.destination = file("$testReportPrefix/$junitXmlTestTaskName")
                     reports.html.destination = file("$testReportPrefix/$junitXmlTestTaskName")
                 }
+
+                filter {
+                    //specific test method
+                    if (project.hasProperty('carvedTestsFilter')){
+                        includeTestsMatching project.carvedTestsFilter
+                    }
+                }
             }
         }
     }
